<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@color/colorBg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnArq"
            android:id="@+id/btnArq"
            android:onClick="onClickBtnArq" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSsh"
            android:text="@string/btnSsh"
            android:onClick="onClickBtnSsh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnColar"
            android:id="@+id/btnColar"
            android:onClick="onClickBtnColar" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPayload"
            android:text="@string/btnPayload"
            android:onClick="onClickBtnPayload" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnProxies"
                android:id="@+id/btnProxies"
                android:onClick="onClickBtnProxies" />

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnThreads"
            android:id="@+id/btnThreads"
            android:onClick="onClickBtnThreads" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCheck"
            android:id="@+id/btnCheck"
            android:onClick="onClickBtnCheck" />
    </LinearLayout>
</LinearLayout>